--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,27 +4,20 @@ description: A new Flutter project.
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-
 version: 1.0.0+1
 
 environment:
   sdk: '>=3.1.0 <4.0.0'
 
-
 dependencies:
-  flutter_cupertino_date_picker_fork: ^1.0.7
+  animated_splash_screen: ^1.3.0
   cupertino_date_textbox: ^1.0.3
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_cupertino_date_picker_fork: ^1.0.7
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
@@ -36,8 +29,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - images/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
